# glm-ocr-rs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LESSONS.md  README.md  record_trace.sh  run_server.py  rust_lm_wrapper.py  test_ocr.py  test_real_image.py  test_vision.py
glm-ocr-rs/: Cargo.toml
glm-ocr-rs/src/: abort.rs  config.rs  engine.rs  generate.rs  image_processor.rs  lib.rs  main.rs  sampler.rs  server.rs  tokenizer.rs
glm-ocr-rs/src/model/: language_model.rs
glm-ocr-rs/src/ocr/: engine.rs  error.rs  mod.rs  request.rs  service.rs
glm-ocr-rs/src/vision/: attention.rs  block.rs
llm_docs/: fix_bf16.txt  profile_metal_help.md
mlx-ocr-2/: Cargo.toml  pyproject.toml
mlx-ocr-2/src/: cache.rs  sampler.rs  tokenizer.rs
mlx-ocr-2/src/model/: attention.rs  decoder.rs  mod.rs  mrope.rs  text_model.rs
mlx-ocr-2/src/ocr/: engine.rs  service.rs
mlx-ocr-2/src/vision/: rotary.rs
server/: Cargo.toml
server/src/: error.rs  http.rs  lib.rs  request.rs  service.rs
src/: cache.rs  config.rs  full_model.rs  generate.rs  image_processor.rs  lib.rs  loader.rs  main.rs  py_bindings.rs  sampler.rs  server.rs  tokenizer.rs
src/model/: attention.rs  decoder.rs  language_model.rs  mlp.rs  mrope.rs  text_model.rs
src/ocr/: abort.rs  engine.rs  request.rs  service.rs
src/vision/: config.rs  merger.rs  mlp.rs  mod.rs  patch_embed.rs  vision_model.rs
tests/: test_logit_match.py  test_prefill_decode.py
