[package]
name = "glm-ocr-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "glm_ocr_rs"
crate-type = ["rlib"]

[dependencies]
mlx-rs = { path = "../mlx-rs/mlx-rs", features = ["safetensors"] }
mlx-sys = { path = "../mlx-rs/mlx-sys" }
tokenizers = { version = "0.22.2", features = ["onig"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
anyhow = "1"
thiserror = "2"

# Image processing
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }

# Template + utilities
minijinja = { version = "2", features = ["json"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking"] }

[features]
gpu-capture = ["mlx-sys/metal-debug"]
