[package]
name = "glm-ocr-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "glm-ocr-server"
path = "src/bin/server.rs"

[dependencies]
glm-ocr-rs = { path = "../glm-ocr-rs" }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
